--- a/share/python/.pylintrc
+++ b/share/python/.pylintrc
@@ -53,7 +53,10 @@ load-plugins=
 #enable-msg=
 
 # Disable the message(s) with the given id(s).
-disable-msg=C0103
+# W0602: Using global for 'XX' but no assignment is done
+# W0621 - Redefining variable from outer scop
+# C0103 - Invalid name, (should match [a-z_][a-z0-9_]{2,30}$$)
+disable-msg=W0602,W0621,C0103
 
 
 [REPORTS]
