--- a/share/git/.gitconfig
+++ b/share/git/.gitconfig
@@ -32,7 +32,13 @@
     sta = stash apply
     rb = rebase
     rbi = rebase -i
+    rb2 = rebase -i HEAD~2
+    rb3 = rebase -i HEAD~3
     rb4 = rebase -i HEAD~4
+    rb5 = rebase -i HEAD~5
+    rb6 = rebase -i HEAD~6
+    rb7 = rebase -i HEAD~7
+    rb8 = rebase -i HEAD~8
     rb9 = rebase -i HEAD~9
     rbn = rebase -i HEAD~20
     rt = reset
