--- a/share/git/.gitconfig
+++ b/share/git/.gitconfig
@@ -21,6 +21,8 @@
     cp = cherry-pick
     cdf = clean -d -f
     ft = format-patch
+    ig = update-index --assume-unchanged
+    igback = update-index --no-assume-unchanged
     lg1 = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
     lg2 = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
     lg = !"git lg1"
