--- a/share/gdb/.gdbscript/python/Makefile.am
+++ b/share/gdb/.gdbscript/python/Makefile.am
@@ -1,6 +1,6 @@
 ## Makefile for the python subdirectory of the GNU C++ Standard library.
 ##
-## Copyright (C) 2009 Free Software Foundation, Inc.
+## Copyright (C) 2009-2015 Free Software Foundation, Inc.
 ##
 ## This file is part of the libstdc++ version 3 distribution.
 ## Process this file with automake to produce Makefile.in.
@@ -23,12 +23,17 @@
 include $(top_srcdir)/fragment.am
 
 ## Where to install the module code.
+if ENABLE_PYTHONDIR
+pythondir = $(prefix)/$(python_mod_dir)
+else
 pythondir = $(datadir)/gcc-$(gcc_version)/python
+endif
 
 all-local: gdb.py
 
 nobase_python_DATA = \
     libstdcxx/v6/printers.py \
+    libstdcxx/v6/xmethods.py \
     libstdcxx/v6/__init__.py \
     libstdcxx/__init__.py
 
