share/git : add sb alias for submodle

--- a/share/git/.gitconfig
+++ b/share/git/.gitconfig
@@ -55,6 +55,7 @@
     dic = diff --cached
     praise = blame 
     pull = pull --ff-only
+    sb = submodule
     ver = rev-parse --short
 
 [apply]
