share/git : add worktree  alias

--- a/share/git/.gitconfig
+++ b/share/git/.gitconfig
@@ -57,6 +57,7 @@
     pull = pull --ff-only
     sb = submodule
     ver = rev-parse --short
+    wt = worktree
     wta = worktree add
     wtp = worktree prune
 
