share/git: must add signoff when committing
Signed-off-by: cm.chao <cm.chao@iclink.tw>

--- a/share/git/.gitconfig
+++ b/share/git/.gitconfig
@@ -13,7 +13,7 @@
     bib = bisect bad
     big = bisect good
     ce = cvsexportcommit -c
-    ci = commit
+    ci = commit --signoff
     cia = commit -a
     cio = commit -o
     ca = commit --amend
