share/git: add stash alias
Signed-off-by: cm.chao <cm.chao@iclink.tw>

--- a/share/git/.gitconfig
+++ b/share/git/.gitconfig
@@ -32,6 +32,8 @@
     sd = svn dcommit
     st = status -s
     sta = stash apply
+    std = stash drop
+    stl = stash list
     stp = stash pop
     rb = rebase
     rbi = rebase -i
