misc: add facility alias
Signed-off-by: Chih-Min Chao <cmchao@gmail.com>
Signed-off-by: Chih-Min Chao <chihmin.chao@sifive.com>

--- a/share/git/.gitconfig
+++ b/share/git/.gitconfig
@@ -59,6 +59,7 @@
     praise = blame 
     pull = pull --ff-only
     sb = submodule
+    sbuir = submodule update --init --recursive
     ver = rev-parse --short
     wt = worktree
     wta = worktree add
